<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="id.co.ale.rainbowDev.BroadcastActivity"
    tools:showIn="@layout/activity_broadcast">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_nav_bubbles"
                    android:background="#34495e"
                    android:textColor="#fff"
                    android:paddingLeft="16dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"/>

                <ListView
                    android:id="@+id/list_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="#ecf0f1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_nav_contacts"
                    android:background="#34495e"
                    android:textColor="#fff"
                    android:paddingLeft="16dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"/>

                <ListView
                    android:id="@+id/list_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ecf0f1"/>
            </LinearLayout>
        </ScrollView>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBg">

            <EditText
                android:id="@+id/chat_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="1dp"

                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/chatHint"
                android:inputType="textMultiLine"
                android:maxHeight="90dp"
                android:padding="12dp"
                android:textColorHint="@color/colorChatHint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageView
                android:id="@+id/send_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/circle"
                android:padding="8dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_broadcast" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
